leadership page updated

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1006,7 +1006,7 @@ overflow: hidden;
 }
 .leader-img{ border: none !important;
     box-shadow: none!important;
-	margin-bottom: 50px;
+	margin:100px 0 20px;
 }
 
 .education-txt li{
