--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -975,7 +975,7 @@ ul.pagination-wrap li.current span {
 
 .leadership-banner-wrap {
 	overflow: hidden;
-	background: url("../img/leadership-banner.png") no-repeat center;
+	background: url("../img/leadership-banner.jpg") no-repeat center;
 	min-height:609px;
 	background-size: cover;
 	
