--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -633,7 +633,7 @@ a.open-menu {
 	
 }
 section.anamitra-body-content {
-    padding: 80px 0;
+    padding: 0 0 80px;
 }
 .txt-block h3{
 	font-size: 22px;
