--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -714,7 +714,7 @@ section.anamitra-body-content {
 }
 
 .publication-banner-wrap{
-	background: url("../img/publications-ban-img.png") no-repeat center;
+	background: url("../img/publications-ban-img.jpg") no-repeat center;
 	height: 609px;
 	background-size: cover;
 	
@@ -1001,14 +1001,12 @@ ul.pagination-wrap li.current span {
 
 .Organization-banner-wrap {
 	overflow: hidden;
-	background: url("../img/Organization-Behaviour-banner.png") no-repeat center;
-/*	min-height:609px;*/
+	/*background: url("../img/Organization-Behaviour-banner.png") no-repeat center;
 	min-height:700px;
-	background-size: cover;
-	
-	
+	background-size: cover;*/
+	min-height:609px;
 }
-
+.Organization-banner-wrap img { width: 100% }
 
 .leadership-block2{ 
 
