--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -993,9 +993,9 @@ ul.pagination-wrap li.current span {
 
 .leadership-banner-wrap {
 	overflow: hidden;
-/*	background: url("../img/leadership-banner.jpg") no-repeat center;*/
+/*	background: url("../img/leadership-banner.jpg") no-repeat center;
 	height:609px;
-	background-size:cover;	
+	background-size:cover;*/
 }
 .leadership-banner-wrap img {
     width: 100%;
