--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,7 +151,7 @@ a.open-menu {
 	border-color: #008975;
 }
 
-a.btn-color1{ background-color:#0848AB!important; border-color:#00054b !important;}
+a.btn-color1{ background-color:#f70403!important; border-color:#900605 !important;}
 
 a.btn-color1:hover{ background-color: #0967c !important;}
 
