--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1279,6 +1279,7 @@ ul.pagination-wrap li.current span {
   background: url("../img/video-frame.png") no-repeat center;
   padding-top: 100px;
 }
+.text-conf1{ font-size:20px; font-weight: bold; color:c1c1c1; padding-bottom: 20px;  }
 /******* Leadership *************/
 
 .leadership-banner-wrap {
