--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1279,7 +1279,9 @@ ul.pagination-wrap li.current span {
   background: url("../img/video-frame.png") no-repeat center;
   padding-top: 100px;
 }
-.text-conf1{ font-size:20px; font-weight: bold; color:c1c1c1; padding-bottom: 20px;  }
+.text-conf1{ font-size:24px; word-spacing: 1px; font-weight: bold; color:#444645; padding: 5px 0;   }
+.text-conf-pd{ padding-bottom: 20px; color: #333; }
+.conf-h-m{ margin-bottom: 5px!important; color:#444645 !important; font-weight: bold !important; }
 /******* Leadership *************/
 
 .leadership-banner-wrap {
